--- a/trunk/TP3/66.02 - TP3.Grupo.1.tex
+++ b/trunk/TP3/66.02 - TP3.Grupo.1.tex
@@ -334,7 +334,7 @@ señal a partir del cual, el sistema de barrido empieza a actuar. Este ajuste no
 \end{equation*}
 \medskip
 
-\noindent Para hacerlo se debió modificar la base de tiempo a XXXX XX/div y se tuvo que variar la perilla de posición horizontal de manera de conseguir una lectura mas cómoda de la cantidad de divisiones abarcadas por un ciclo de la señal.
+\noindent Para hacerlo se debió modificar la base de tiempo a 0,1 $\mu$S/div y se tuvo que variar la perilla de posición horizontal de manera de conseguir una lectura mas cómoda de la cantidad de divisiones abarcadas por un ciclo de la señal.
 	\par
 	Para la medición del offset máximo que nos puede entregar el generador de funciones se procedió volviendo al estado inicial, manteniendo la conexión del generador de funciones al osciloscopio. Luego se aumentó la perilla del offset del generador al máximo (positivo). En el osciloscopio se posicionó la perilla del selector de entrada del canal \textit{CH1} en \textit{GND} y variando el potenciometro de posición vertical se llevó la señal hacia la segunda división mas baja de la pantalla. Acto seguido, se posicionó la perilla del selector de entrada del \textit{CH1} en \textit{DC} notando el desplazamiento de la señal a divisiones por encima de lo que llega a mostrar el display. Para lograr ver a esta de la forma mas conveniente se modificó la escala de tensión a 2V/div. Hecho esto se observó que el offset máximo (positivo) del generador de funciones es
 
