--- a/trunk/TP2/66.02 - TP2.Grupo.1.tex
+++ b/trunk/TP2/66.02 - TP2.Grupo.1.tex
@@ -187,9 +187,9 @@ con \textbf{5V} de amplitud, y con una frecuencia de \textbf{100 Hz} , para aseg
 
 Cada multímetro tiene diferentes formas de medir las tensiones eficaces:\\
 
-En \textbf{DC}, los tres multímetros calculan el valor medio de la onda presente, que es el valor de la parte continua de la señal.
+En \textbf{DC}, los tres multímetros calculan el valor medio de la onda presente, que es el valor de la parte continua de la señal.\\
 
-En \textbf{AC}:\\
+En \textbf{AC}, los métodos no son iguales para los multímetros. Por lo tanto a continuación se hará una breve descripción de las formas de calcular los valores eficaces de cada tipo de multímetro.
 
 
 
