--- a/trunk/TP2/66.02 - TP2.Grupo.1.tex
+++ b/trunk/TP2/66.02 - TP2.Grupo.1.tex
@@ -183,14 +183,14 @@ En esta parte del trabajo práctico, se hicieron distintas mediciones con el fin
 \indent Se ajustó el generador para que el osciloscopio muestre una señal con un ciclo de trabajo (duty cicle) del \textbf{30\%},
 con \textbf{5V} de amplitud, y con una frecuencia de \textbf{100 Hz} , para asegurarnos de que esté dentro del ancho de banda de los instrumentos.\\
 \indent Las incertidumbres de los instrumentos no fueron tomadas en cuenta, ya que son irrelevantes para el objetivo de esta parte de la prácitca.
-\medskip
+	\par
+	Cada multímetro tiene diferentes formas de medir las tensiones eficaces:
+	\medskip
 
-Cada multímetro tiene diferentes formas de medir las tensiones eficaces:\\
-
-En \textbf{DC}, los tres multímetros calculan el valor medio de la onda presente, que es el valor de la parte continua de la señal.\\
+En \textbf{DC}, los tres multímetros calculan el valor medio de la onda presente, que es el valor de la parte continua de la señal.
 
 En \textbf{AC}, los métodos no son iguales para los multímetros. Por lo tanto a continuación se hará una breve descripción de las formas de calcular los valores eficaces de cada tipo de multímetro.
-
+\bigskip
 
 
 \subsubsection{Multímetro DVM}
