--- a/TP3/66.02 - TP3.Grupo.1.tex
+++ b/TP3/66.02 - TP3.Grupo.1.tex
@@ -523,13 +523,15 @@ Finalmente, para el \textit{acoplamiento de entrada en DC} y \textit{acoplamient
 	En el sistema de disparo, mediante la utilización de los controles \textit{TRIGGER LEVEL} (nivel de disparo) y \textit{TRIGGER SELECTOR} (tipo de disparo) es posible estabilizar lo mejor posible señales repetitivas. La clave está en que el barrido comience siempre en el mismo punto de la onda repetitiva. Para ello se utiliza el llamado \textit{pulso de sincronismo} que es generada por la sección de disparo. El generador de rampa generará un solo ciclo de diente de sierra cuando reciba el pulso de sincronismo, y luego esperará hasta que se produzca el siguiente. Esta forma de sincronizar se llama \textit{Modo Normal}. En modo normal si no hay pulso de sincronismo no veremos nada en la pantalla, en cambio en modo \textit{Auto}, la señal sincronizada es visible, pero si variamos el nivel de disparo hasta que se pierda el sincronismo se producirán disparos aleatorios.
 	\par
 	Para la visualización de las señales, depende de cómo seleccionamos el acoplamiento de entrada y del trigger que vamos a ver. En el caso del acoplamiento de entrada, si este está en DC se verá la misma señal que ingresa, en cambio en el modo AC se filtrará mediante un capacitor la componente continua de la misma, o el offset. En el acoplamiento del trigger, al igual que en el de entrada en AC, se filtrará la componente de offset de la señal, si es que no se filtro anteriormente en la entrada,  y en el modo DC se mostrará la señal tal como se la recibe de la entrada. Si la misma esta en AC, se la ve sin el offset, y si esta en DC la señal se verá pura.
-	\bigskip\bigskip
+\bigskip\bigskip
 
+
+\newpage \textit{}
+\newpage
 
 
 
 % APÉNDICE A
-
 \newpage
 \vspace*{4cm}
 \begin{center}
@@ -537,5 +539,9 @@ Finalmente, para el \textit{acoplamiento de entrada en DC} y \textit{acoplamient
 	\bigskip\bigskip
 	\Large{\textit{``Hojas de datos de instrumentos de medición''}}
 \end{center}
+
+
+\newpage \textit{}
+\newpage
 
 \end{document}
