--- a/trunk/TP2/66.02 - TP2.Grupo.1.tex
+++ b/trunk/TP2/66.02 - TP2.Grupo.1.tex
@@ -468,6 +468,10 @@ Por lo tanto, los valores aproximados de los anchos de banda son:
 \end{center}
 
 
+\newpage \textit{}
+\newpage
+
+
 \newpage
 \section{Cálculos teóricos}
 \bigskip
@@ -568,10 +572,10 @@ V_{ef} = \sqrt{{1\over T}\times 2 \times {b\times h^2 \over 2}} = \sqrt{5ms \tim
 \medskip
 
 
+\newpage
+
 
 % APÉNDICE B
-
-\newpage
 \vspace*{4cm}
 \begin{center}
 	\textbf{\Huge{Apéndice B}} \\
@@ -579,6 +583,8 @@ V_{ef} = \sqrt{{1\over T}\times 2 \times {b\times h^2 \over 2}} = \sqrt{5ms \tim
 	\Large{\textit{``Hojas de datos de instrumentos de medición''}}
 \end{center}
 
+\newpage \textit{}
+\newpage
 
 
 
