--- a/trunk/TP4/Informe/66.02 - TP4.Grupo.1.tex
+++ b/trunk/TP4/Informe/66.02 - TP4.Grupo.1.tex
@@ -114,7 +114,7 @@
 
 % INTRODUCCIÓN
 \section{Introducción}
-\bigskip
+\medskip
 
 % INTRODUCCIÓN - Puntas
 \subsection{Puntas}
@@ -206,13 +206,39 @@ Definimos como frecuencia de corte a la frecuencia para la cual la respuesta en 
 \section{Desarrollo}
 
 	En los siguientes apartados se pasarán a desarrollar las mediciones empíricas, cada una de las cuales esta complementada con una explicación de los pasos llevados a cabo, valores obtenidos, análisis de resultados y conclusiones parciales.
+\bigskip
+
+
+
+% DESARROLLO - Medicion del tiempo de crecimiento
+\subsection{Medición del tiempo de crecimiento}
+	
+	[ Colocar texto aquí ]
+	\bigskip
+
+
+
+% DESARROLLO - Respuesta en frecuencia
+\subsection{Medición de la respuesta en frecuencia}
+	
+	[ Colocar texto aquí ]
+	\bigskip
+
+
+
+% DESARROLLO - Determinación de la frecuencia de corte
+\subsection{Determinación de la frecuencia de corte}
+	
+	[ Colocar texto aquí ]
+	\bigskip
 
 
 
 % DESARROLLO - Rectificadores
 \subsection{Rectificadores}
-
-
+	
+	[ Colocar texto aquí ]
+	\bigskip
 
 
 
